--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -138,7 +138,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="loginModalLabel">로그인</h5>
+                <h5 href="/login" class="modal-title" id="loginModalLabel">로그인</h5> <!-- 로그인 페이지로 이동 -->
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
