--- a/src/main/resources/templates/member/memberCreate.html
+++ b/src/main/resources/templates/member/memberCreate.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h3 layout:fragment="body-title">회원 가입</h3>
         <div class="mt-5">
-            <form th:action="@{/member/join.do}" th:object="${memberFormDto}" method="post">
+            <form id="registerForm" th:action="/member/join" th:object="${memberFormDto}" method="post">
                 <div class="form-group">
                     <label for="memberId">아이디</label>
                     <input type="text" id="memberId" th:field="*{memberId}" class="form-control" />
