--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -6,10 +6,10 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
   <style>
-        .error {
-            color: #bd2130;
-        }
-    </style>
+    .error {
+        color: #bd2130;
+    }
+  </style>
 </th:block>
 
 <div layout:fragment="content">
@@ -25,7 +25,7 @@
     </div>
 
     <button class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary" onClick="location.href='/member/join.do'">회원가입</button>
+    <button type="button" class="btn btn-primary" onClick="location.href='/member/join'">회원가입</button>
 
   </form>
 
